[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ceng"
authors = [{name = "Ricky L Teachey Jr", email = "ricky@teachey.org"}]
readme = "README.md"
classifiers = [
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha",
]
requires-python=">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "numpy >=1.20",
    "scipy >=1.7",
    "wrapt >= 1.13",
    "numba",
]

[project.urls]
Home = "https://github.com/ricyteach/ceng"

[project.optional-dependencies]
test = [
    "pytest >=6.2",
]
